syntax= "proto3";

package product;

service ProductService{
    rpc Get(Product) returns (Response){}
    rpc GetAll(Request)returns(Response){}
    rpc GetClientProducts(Client)returns(Response){}
}
message Client{
    string nom=1;
    string prenom=2;
    string dateofbirth=3;
    string abjcardno=4;
}
message Product{
    string id=1;
    string name=2;
}
message Request{}
message ClientRequest{
    string nom=1;
    string prenom=2;
    string dateofbirth=3;
    
}
message Response{
    Product product=1;
    repeated Product products=3;
    repeated Error errors=4;
}
message Error{
    int32 code=1;
    string description=2;
}
message Token{
    string token=1;
    bool valid=2;
    repeated Error errors=3;
}