syntax= "proto3";

package souscription;

service SouscriptionService{
    rpc Subscribe(Souscription) returns (Response){}
    rpc GetAll(Request)returns(Response){}
    rpc DeleteAll(Request)returns(Response){}
}
message Souscription{
    reserved 6;

    string id=1;
    string nom=2;
    string prenom=3;
    string dateofbirth=4;
    string telephone=5;
    uint64 montant=7;
    int32 codeproduit=8;
    string datepayment=9;
    string echeance=10;
    string beneficiaire=11;
    string email=12;
    string etattraitement=13;
    string createdAt=14;
    string firstassociate=15;
    string dateofbirth_one=16;
    string dateofbirth_two=17;
    string dateofbirth_three=18;
    string lienparente_one=19;
    string secondtassociate=20;
    string lienparente_two=21;
    string abjcardno=22;
}
message Request{}
message Response{
    bool done=1;
    string description=2;
    Souscription souscription=3;
    repeated Souscription souscriptions=4;
    repeated Error errors=5;
    
}
message Error{
    int32 code=1;
    string description=2;
}